photo width to 250

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <div class="header">
-      <img src="Ava Photo.jpg">
+      <img width="250" src="Ava Photo.jpg">
       <h1>Mark Watney</h1>
       <h2>Botanist and Mechanical Engineer</h2>
       <p>Contact Me:</p>
