Change title and h1

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ava Han </title>
+    <title>Ava Han's Resume </title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
@@ -9,7 +9,7 @@
   <body>
     <div class="header">
       <img width="250" src="Ava Photo.jpg">
-      <h1>Mark Watney</h1>
+      <h1>Ava Han</h1>
       <h2>Botanist and Mechanical Engineer</h2>
       <p>Contact Me:</p>
       <ul>
