--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="header">
       <img width="250" src="Ava Photo.jpg">
       <h1>Ava Han</h1>
-      <h2>Botanist and Mechanical Engineer</h2>
+      <h2>User Experience Strategist and Kellogg MBA 2016</h2>
       <p>Contact Me:</p>
       <ul>
         <li><a href="http://linkedIn.com/HuaHan">LinkedIn</a></li>
