Contact me list

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p>Contact Me:</p>
       <ul>
         <li><a href="http://linkedIn.com/HuaHan">LinkedIn</a></li>
-        <li><a href="http://facebook.com/MarkWatneyAres3">Facebook</a></li>
+        <li><a href="http://facebook.com/HuaHan">Facebook</a></li>
       </ul>
     </div>
 
