Contact me list

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <h2>User Experience Strategist and Kellogg MBA 2016</h2>
       <p>Contact Me:</p>
       <ul>
-        <li><a href="http://linkedIn.com/HuaHan">LinkedIn</a></li>
-        <li><a href="http://facebook.com/HuaHan">Facebook</a></li>
+        <li><a href="https://www.linkedin.com/in/hua-han-9b484b19">LinkedIn</a></li>
+        <li><a href="https://twitter.com/HuaEthnographer">Twitter</a></li>
       </ul>
     </div>
 
