detailed work experience

--- a/index.html
+++ b/index.html
@@ -20,20 +20,48 @@
 
     <h3>Summary</h3>
     <p>
-      Mark is a specialist for NASA and currently assigned to the Ares 3 mission to Mars.
-      He has a track record of radical ingenuity and a never-say-die attitude.
-      He is a good team player (though he tends to insult them sometimes).
-      Mark can improvise creative solutions with nothing more than duct tape and water.
-      However, he tends to get left behind by his colleagues.
+      Ava is currently a design stragist for Allstate's user experience group in digital marketing.
+      Before joining Allstate, she worked in the fields of innovation, technology, CPG, and healthcare,
+      applying user centered design principles, classical tranining in cultural anthropology (she received
+      her Ph.D. in Cultural Anthropology from Washington State University in 2002), as well as strong
+      business acumen. Her expertise includes innovation, marketing strategy, consumer insights, product
+      development, user centered design research, design strategy, ethnography, UX research, usability
+      studies, prototyping, and cross-functional leadership. Outside work, Ava enjoys reading Swedish
+      mystery novels and traveling.
     </p>
 
     <h3>Experience</h3>
 
-    <h4>NASA Engineer, 2031 - Present</h4>
-    <p>Mars mission specialist.</p>
-    <p>Botanist researcher and extraterrestrial farmer.</p>
+    <h4> ALLSTATE </h4>
+    <h5> Senior User Experience Design Strategist, 2015 - Present </h5>
+      <li> Lead strategic research program to investigate impactful opportunities for Self Service across
+           My Account and Allstate Mobile that would help improve the customer experience and reduce cost
+      <li> Influence leadership teams to help promote a culture of user-centered design thinking across
+        AORs including E-Business, Innovation, Market Research, and Connected Car
+      <li> Develop analytic models and framework to evangelize user experience research team’s capabilities,
+        processes, and expertise in consumer insight, product design, and innovation process
+      <li> Build and grow relationships with stakeholders across the enterprise to drive optimal customer experiences with Allstate products
+      <li> As a consumer advocate, design and execute design research to build a holistic customer experience and deliver delight to Allstate customers, agents, and employees
+      <li> Help grow the UX team by developing others in design thinking and incorporating industry best practices
+      <li> Lead rapid and iterative UX research activities for Drivewise 3.0 to help deliver more frequent and positive customer interactions by uncovering user needs, mental models, and barriers through
+      <li> Support Innovation team’s New Household, Retirees, and Agent Trust programs by conducting exploratory research to help facilitate the inception and design iterations of emerging concepts and scenarios
+      <li> Manage engagements with multiple key research vendors including User Zoom and GFK to ensure ROIs
+      <li> Conduct cultural trend analysis and benchmark study for My Offer against key competitors including AAA and USAA to uncover opportunities to improve customer engagement
+      <li> Conduct internal stakeholder interviews and co-created personas for Milewise
 
-    <h4>Botanist, 2028-2031</h4>
+    <h4> HUMANA </H4>
+    <h5> Design Strategist, Consumer Experience Center of Excellence, 2028-2031</h5>
+      <li> Led design research projects to identify opportunities to improve the overall consumer experience of Medicaid members and low income consumers before, during, and after enrollment
+      <li> Developed multiple outreach programs to help internal teams better connect with Medicaid customers through Hispanic church, food pantries, and homeless shelters in Evanston and Chicago
+
+    <h4> SC JOHNSON </h4>
+    <h5> Senior Design Researcher, Home Cleaning </h5>
+      <li> Led 15 member high-performing cross-functional research development teams in global research for three of the top ten kitchen innovation and breakthrough projects selected by management to drive growth
+      <li> Presented consumer insights and recommendations to C-level executives and senior management
+      <li>  Managed million dollar annual research budget, resulting in accelerated timeline and high quality research outcomes to facilitate the inception of new product concepts and the enhancement of existing products
+      <li> Developed and adapted research methodologies to meet evolving business needs and consequently the changing priorities of the internal clients in marketing, product supply, and engineering
+      <li> Built and managed relationship with strategic research vendors to secure commitments and cost benefits
+
     <p>Potato photosynthesis specialist.</p>
 
     <h3>Skills</h3>
