--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
     <h4> ALLSTATE </h4>
     <h5> Senior User Experience Design Strategist, 2015 - Present </h5>
+    <ul>
       <li> Lead strategic research program to investigate impactful opportunities for Self Service across
            My Account and Allstate Mobile that would help improve the customer experience and reduce cost
       <li> Influence leadership teams to help promote a culture of user-centered design thinking across
@@ -48,21 +49,24 @@
       <li> Manage engagements with multiple key research vendors including User Zoom and GFK to ensure ROIs
       <li> Conduct cultural trend analysis and benchmark study for My Offer against key competitors including AAA and USAA to uncover opportunities to improve customer engagement
       <li> Conduct internal stakeholder interviews and co-created personas for Milewise
-
+    </ul>
+    
     <h4> HUMANA </H4>
-    <h5> Design Strategist, Consumer Experience Center of Excellence, 2028-2031</h5>
+    <h5> Design Strategist, Consumer Experience Center of Excellence, 2014-2014</h5>
+    <ul>
       <li> Led design research projects to identify opportunities to improve the overall consumer experience of Medicaid members and low income consumers before, during, and after enrollment
       <li> Developed multiple outreach programs to help internal teams better connect with Medicaid customers through Hispanic church, food pantries, and homeless shelters in Evanston and Chicago
+    </ul>
 
     <h4> SC JOHNSON </h4>
-    <h5> Senior Design Researcher, Home Cleaning </h5>
+    <h5> Senior Design Researcher, Home Cleaning, 2011-2014 </h5>
+    <ul>
       <li> Led 15 member high-performing cross-functional research development teams in global research for three of the top ten kitchen innovation and breakthrough projects selected by management to drive growth
       <li> Presented consumer insights and recommendations to C-level executives and senior management
       <li>  Managed million dollar annual research budget, resulting in accelerated timeline and high quality research outcomes to facilitate the inception of new product concepts and the enhancement of existing products
       <li> Developed and adapted research methodologies to meet evolving business needs and consequently the changing priorities of the internal clients in marketing, product supply, and engineering
       <li> Built and managed relationship with strategic research vendors to secure commitments and cost benefits
-
-    <p>Potato photosynthesis specialist.</p>
+    </ul>
 
     <h3>Skills</h3>
     <ul>
