--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <li> Conduct cultural trend analysis and benchmark study for My Offer against key competitors including AAA and USAA to uncover opportunities to improve customer engagement
       <li> Conduct internal stakeholder interviews and co-created personas for Milewise
     </ul>
-    
+
     <h4> HUMANA </H4>
     <h5> Design Strategist, Consumer Experience Center of Excellence, 2014-2014</h5>
     <ul>
@@ -70,10 +70,10 @@
 
     <h3>Skills</h3>
     <ul>
-      <li>Astronaut</li>
-      <li>Growing plants</li>
-      <li>Fixing computers</li>
-      <li>Driving Mars rovers</li>
+      <li>Strategist</li>
+      <li>Design research</li>
+      <li>Cultural anthropologist</li>
+      <li>Ethnographer</li>
     </ul>
 
     <h3>Education</h3>
