--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
     <h3>Experience</h3>
 
-    <h4> ALLSTATE </h4>
-    <h5> Senior User Experience Design Strategist, 2015 - Present </h5>
+    <h4> Allstate Insurance</h4>
+    <h5> <em>Senior User Experience Design Strategist, 2015 - Present </em></h5>
     <ul>
       <li> Lead strategic research program to investigate impactful opportunities for Self Service across
            My Account and Allstate Mobile that would help improve the customer experience and reduce cost
@@ -51,15 +51,15 @@
       <li> Conduct internal stakeholder interviews and co-created personas for Milewise
     </ul>
 
-    <h4> HUMANA </H4>
-    <h5> Design Strategist, Consumer Experience Center of Excellence, 2014-2014</h5>
+    <h4> Humana </H4>
+    <h5> <em> Design Strategist, Consumer Experience Center of Excellence, 2014-2014 </em></h5>
     <ul>
       <li> Led design research projects to identify opportunities to improve the overall consumer experience of Medicaid members and low income consumers before, during, and after enrollment
       <li> Developed multiple outreach programs to help internal teams better connect with Medicaid customers through Hispanic church, food pantries, and homeless shelters in Evanston and Chicago
     </ul>
 
-    <h4> SC JOHNSON </h4>
-    <h5> Senior Design Researcher, Home Cleaning, 2011-2014 </h5>
+    <h4> SC Johnson </h4>
+    <h5> <em> Senior Design Researcher, Home Cleaning, 2011-2014 </em></h5>
     <ul>
       <li> Led 15 member high-performing cross-functional research development teams in global research for three of the top ten kitchen innovation and breakthrough projects selected by management to drive growth
       <li> Presented consumer insights and recommendations to C-level executives and senior management
@@ -78,8 +78,8 @@
 
     <h3>Education</h3>
     <ul>
-      <li>PhD in Mechanical Engineering, <em>Northwestern University, 2028</em></li>
-      <li>Masters of Science in Botany, <em>Northwestern University, 2029</em></li>
+      <li>PhD in Cultural Anthropology, <em>Washington State University, 2002</em></li>
+      <li>Kellogg MBA, <em>Northwestern University, 2016</em></li>
     </ul>
 
 
