YouTube, lists, links

--- a/Travel.html
+++ b/Travel.html
@@ -1,36 +1,34 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Trip to Italy </title>
+    <title>Our Travels </title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
 
   <body>
     <div class="header">
-      <img width="250" src="Ava Photo.jpg">
-      <h1>Ava Han</h1>
-      <h2>User Experience Strategist and Kellogg MBA 2016</h2>
-      <p>Contact Me:</p>
+      <img width="500" src="Siena.jpg">
+      <h1>Our Travels</h1>
+      <h2>Italy</h2>
+      <p>Check the following youtube video to see the top ten things to do in Venice:</p>
+      <iframe width="420" height="315" src="https://www.youtube.com/embed/thQXKqTB3L8" frameborder="0" allowfullscreen></iframe>
+      <p> Useful links </p>
+
       <ul>
-        <li><a href="https://www.linkedin.com/in/hua-han-9b484b19">LinkedIn</a></li>
-        <li><a href="https://twitter.com/HuaEthnographer">Twitter</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/St_Mark%27s_Basilica#/media/File:Veneza47.jpg">St Mark's Basilica</a></li>
+        <li><a href="https://www.ricksteves.com/tours/italy">Rick Steve's Italy Tours 2016</a></li>
+        <li><a href="http://www.italyguides.it/en/tuscany/siena">Virtual Travel to Sienna</a></li>
       </ul>
     </div>
 
-    <h3>Summary</h3>
+    <h3>Venice</h3>
+    <img width="300" src="Us in Venice.jpg">
     <p>
-      Ava is currently a design stragist for Allstate's user experience group in digital marketing.
-      Before joining Allstate, she worked in the fields of innovation, technology, CPG, and healthcare,
-      applying user centered design principles, classical tranining in cultural anthropology (she received
-      her Ph.D. in Cultural Anthropology from Washington State University in 2002), as well as strong
-      business acumen. Her expertise includes innovation, marketing strategy, consumer insights, product
-      development, user centered design research, design strategy, ethnography, UX research, usability
-      studies, prototyping, and cross-functional leadership. Outside work, Ava enjoys reading Swedish
-      mystery novels and traveling.
+      Our first stop was Venice.
     </p>
 
-    <h3>Experience</h3>
+    <h3>Siena</h3>
 
     <h4> Allstate Insurance</h4>
     <h5> <em>Senior User Experience Design Strategist, 2015 - Present </em></h5>
