--- a/Travel.html
+++ b/Travel.html
@@ -8,78 +8,52 @@
 
   <body>
     <div class="header">
-      <img width="500" src="Siena.jpg">
+      <img width="800" src="Siena.jpg">
       <h1>Our Travels</h1>
-      <h2>Italy</h2>
-      <p>Check the following youtube video to see the top ten things to do in Venice:</p>
-      <iframe width="420" height="315" src="https://www.youtube.com/embed/thQXKqTB3L8" frameborder="0" allowfullscreen></iframe>
+      <h2>Italy 2007</h2>
       <p> Useful links </p>
-
       <ul>
         <li><a href="https://en.wikipedia.org/wiki/St_Mark%27s_Basilica#/media/File:Veneza47.jpg">St Mark's Basilica</a></li>
         <li><a href="https://www.ricksteves.com/tours/italy">Rick Steve's Italy Tours 2016</a></li>
         <li><a href="http://www.italyguides.it/en/tuscany/siena">Virtual Travel to Sienna</a></li>
+        <li> <a href="http://www.villasanmichele.eu/en/welcome"> San Michele Villa </a></li>
       </ul>
     </div>
 
     <h3>Venice</h3>
-    <img width="300" src="Us in Venice.jpg">
-    <p>
-      Our first stop was Venice.
+    <p> Our first stop was Venice. We landed at a small airport outside the city, from where we hopped on a water taxi which took us to the city center.
+    It was an amazing experience. A bit pricey, but truely worth it. </p>
+    <img width="300" src="Cannel.jpg">
+    <img width="400" src="Us in Venice.jpg">
+    <img width="400" src="Architecture.jpg">
+    <img width="400" src="Gondola.jpg">
+    <img width="410" src="Venice night.jpg">
+
+    <p> Check the following youtube video to see the top ten things to do in Venice.</p>
+      <iframe width="420" height="315" src="https://www.youtube.com/embed/thQXKqTB3L8" frameborder="0" allowfullscreen></iframe>
     </p>
 
     <h3>Siena</h3>
+    <p> After spending a few days to explore Venice, we took a train to Siena. A truely beautiful city! </p>
+    <img width="300" src="Us in Siena country side.jpg">
+    <img width="300" src="Siena steps.jpg">
+    <img width="500" src="Siena tower.jpg">
+    <img width="300" src="Porcheta.jpg">
+    <img width="500" src="Sprits.jpg">
 
-    <h4> Allstate Insurance</h4>
-    <h5> <em>Senior User Experience Design Strategist, 2015 - Present </em></h5>
-    <ul>
-      <li> Lead strategic research program to investigate impactful opportunities for Self Service across
-           My Account and Allstate Mobile that would help improve the customer experience and reduce cost
-      <li> Influence leadership teams to help promote a culture of user-centered design thinking across
-        AORs including E-Business, Innovation, Market Research, and Connected Car
-      <li> Develop analytic models and framework to evangelize user experience research team’s capabilities,
-        processes, and expertise in consumer insight, product design, and innovation process
-      <li> Build and grow relationships with stakeholders across the enterprise to drive optimal customer experiences with Allstate products
-      <li> As a consumer advocate, design and execute design research to build a holistic customer experience and deliver delight to Allstate customers, agents, and employees
-      <li> Help grow the UX team by developing others in design thinking and incorporating industry best practices
-      <li> Lead rapid and iterative UX research activities for Drivewise 3.0 to help deliver more frequent and positive customer interactions by uncovering user needs, mental models, and barriers through
-      <li> Support Innovation team’s New Household, Retirees, and Agent Trust programs by conducting exploratory research to help facilitate the inception and design iterations of emerging concepts and scenarios
-      <li> Manage engagements with multiple key research vendors including User Zoom and GFK to ensure ROIs
-      <li> Conduct cultural trend analysis and benchmark study for My Offer against key competitors including AAA and USAA to uncover opportunities to improve customer engagement
-      <li> Conduct internal stakeholder interviews and co-created personas for Milewise
-    </ul>
+    <h3>Sorrento</h3>
+    <p> From Siena, we traveled south to Sorrento, a gorgeous city on the Amalfi coast.</p>
+    <img width="500" src="Coast.jpg">
+    <img width="400" src="Us in Sorrento.jpg">
+    <img width="400" src="Sphinx.jpg">
+    <img width="400" src="Sweets.jpg">
 
-    <h4> Humana </H4>
-    <h5> <em> Design Strategist, Consumer Experience Center of Excellence, 2014-2014 </em></h5>
-    <ul>
-      <li> Led design research projects to identify opportunities to improve the overall consumer experience of Medicaid members and low income consumers before, during, and after enrollment
-      <li> Developed multiple outreach programs to help internal teams better connect with Medicaid customers through Hispanic church, food pantries, and homeless shelters in Evanston and Chicago
-    </ul>
-
-    <h4> SC Johnson </h4>
-    <h5> <em> Senior Design Researcher, Home Cleaning, 2011-2014 </em></h5>
-    <ul>
-      <li> Led 15 member high-performing cross-functional research development teams in global research for three of the top ten kitchen innovation and breakthrough projects selected by management to drive growth
-      <li> Presented consumer insights and recommendations to C-level executives and senior management
-      <li>  Managed million dollar annual research budget, resulting in accelerated timeline and high quality research outcomes to facilitate the inception of new product concepts and the enhancement of existing products
-      <li> Developed and adapted research methodologies to meet evolving business needs and consequently the changing priorities of the internal clients in marketing, product supply, and engineering
-      <li> Built and managed relationship with strategic research vendors to secure commitments and cost benefits
-    </ul>
-
-    <h3>Skills</h3>
-    <ul>
-      <li>Strategist</li>
-      <li>Design research</li>
-      <li>Cultural anthropologist</li>
-      <li>Ethnographer</li>
-    </ul>
-
-    <h3>Education</h3>
-    <ul>
-      <li>PhD in Cultural Anthropology, <em>Washington State University, 2002</em></li>
-      <li>Kellogg MBA, <em>Northwestern University, 2016</em></li>
-    </ul>
-
+    <h3>Rome</h3>
+    <p> Our last stop was Rome.</p>
+    <img width="500" src="Rome view.jpg">
+    <img width="400" src="Rome.jpg">
+    <img width="400" src="Cat in rome.jpg">
+    <img width="500" src="Roman bath.jpg">
 
   </body>
 </html>
