added more youtube videos

--- a/Travel.html
+++ b/Travel.html
@@ -8,7 +8,7 @@
 
   <body>
     <div class="header">
-      <img width="800" src="Siena.jpg">
+      <img width="1000" src="Siena steps.jpg">
       <h1>Our Travels</h1>
       <h2>Italy 2007</h2>
       <p> Useful links </p>
@@ -22,38 +22,64 @@
 
     <h3>Venice</h3>
     <p> Our first stop was Venice. We landed at a small airport outside the city, from where we hopped on a water taxi which took us to the city center.
-    It was an amazing experience. A bit pricey, but truely worth it. </p>
-    <img width="300" src="Cannel.jpg">
-    <img width="400" src="Us in Venice.jpg">
-    <img width="400" src="Architecture.jpg">
-    <img width="400" src="Gondola.jpg">
-    <img width="410" src="Venice night.jpg">
+    It was an amazing experience. A bit pricey, but truely worth it. What I loved the most about the visit?
+    <ul>
+      <li> xxxx</li>
+      <li> xxxx</li>
+      <li> xxxx</li>
+      <li> xxxx</li>
+    </ul>
 
-    <p> Check the following youtube video to see the top ten things to do in Venice.</p>
-      <iframe width="420" height="315" src="https://www.youtube.com/embed/thQXKqTB3L8" frameborder="0" allowfullscreen></iframe>
+    <img width="600" src="Cannel.jpg">
+    <!-- <img width="450" src="Us in Venice.jpg">
+    <img width="450" src="Architecture.jpg">
+    <img width="400" src="Gondola.jpg">
+    <img width="450" src="Venice night.jpg"> -->
+
+    <p>
+    Check the following youtube video to see the top ten things to do in Venice.</p>
+      <iframe width="300" height="200" src="https://www.youtube.com/embed/thQXKqTB3L8" frameborder="0" allowfullscreen></iframe>
     </p>
 
     <h3>Siena</h3>
-    <p> After spending a few days to explore Venice, we took a train to Siena. A truely beautiful city! </p>
-    <img width="300" src="Us in Siena country side.jpg">
-    <img width="300" src="Siena steps.jpg">
-    <img width="500" src="Siena tower.jpg">
-    <img width="300" src="Porcheta.jpg">
-    <img width="500" src="Sprits.jpg">
+    <p> After spending a few days to explore Venice, we took a train to Siena in Tascany. A truely beautiful city! </p>
+
+  <img width="450" src="Us in Siena country side.jpg">
+    <ul>
+      <li> xxxx</li>
+      <li> xxxx</li>
+      <li> xxxx</li>
+      <li> xxxx</li>
+    </ul>
+
+    <p>
+    Check the following youtube video to see the top ten things to do in Siena.</p>
+    <iframe width="300" height="200" src="https://www.youtube.com/embed/OofCiguCU0I" frameborder="0" allowfullscreen></iframe>
+    </p>
 
     <h3>Sorrento</h3>
-    <p> From Siena, we traveled south to Sorrento, a gorgeous city on the Amalfi coast.</p>
-    <img width="500" src="Coast.jpg">
-    <img width="400" src="Us in Sorrento.jpg">
-    <img width="400" src="Sphinx.jpg">
-    <img width="400" src="Sweets.jpg">
+    <p> From Siena, we traveled south to Sorrento, a gorgeous city on the Amalfi coast. What I loved the most about Sorrento: </p>
+    <ul>
+      <li> xxxx</li>
+      <li> xxxx</li>
+      <li> xxxx</li>
+
+    </ul>
+    <img width="400" src="Island.jpg">
+    <p>
+    Check this Rick Steve's YouTube video to learn more about Sorrento.</p>
+    <iframe width="300" height="200" src="https://www.youtube.com/embed/1rx9dWL6cAc" frameborder="0" allowfullscreen></iframe>
+    </p>
 
     <h3>Rome</h3>
-    <p> Our last stop was Rome.</p>
-    <img width="500" src="Rome view.jpg">
-    <img width="400" src="Rome.jpg">
-    <img width="400" src="Cat in rome.jpg">
-    <img width="500" src="Roman bath.jpg">
+    <p> We wrapped our two week trip visiting Rome. </p>
+
+    <img width="800" src="Ectasy.jpg">
+    <p>
+    Check this Rome walking tour video to get some ideas for your next step in Rome.
+    </p>
+    <iframe width="300" height="200" src="https://www.youtube.com/embed/EG5mQpM0lVY" frameborder="0" allowfullscreen></iframe>
+    </p>
 
   </body>
 </html>
