formatting photos, add gray background

--- a/Travel.html
+++ b/Travel.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>
+    body {background-color: lightgrey;}
     <title>Our Travels </title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="styles.css">
-  </head>
+    /*<!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->*/
+</style>
+</head>
 
   <body>
     <div class="header">
-      <img width="1000" src="Siena steps.jpg">
+      <center><img width="850" style="border:10px solid black; padding:15px" src="Rome view.jpg"></center>
+      <font color="#0058b4">
       <h1>Our Travels</h1>
-      <h2>Italy 2007</h2>
+        <font color="black">
+      <h2><i>Bella Italia! 2007</i></h2>
       <p> Useful links </p>
       <ul>
         <li><a href="https://en.wikipedia.org/wiki/St_Mark%27s_Basilica#/media/File:Veneza47.jpg">St Mark's Basilica</a></li>
@@ -20,9 +25,9 @@
       </ul>
     </div>
 
-    <h3>Venice</h3>
+    <h3><style>=border-bottom: solid 4px gray;padding-bottom:8px;<style>Venice</h3>
     <p> Our first stop was Venice. We landed at a small airport outside the city, from where we hopped on a water taxi which took us to the city center.
-    It was an amazing experience. A bit pricey, but truely worth it. What I loved the most about the visit?
+    It was an amazing experience. A bit pricey, but truely worth it. Here are some of my favorite places and things to do in Venice.
     <ul>
       <li> xxxx</li>
       <li> xxxx</li>
@@ -30,11 +35,10 @@
       <li> xxxx</li>
     </ul>
 
-    <img width="600" src="Cannel.jpg">
-    <!-- <img width="450" src="Us in Venice.jpg">
-    <img width="450" src="Architecture.jpg">
-    <img width="400" src="Gondola.jpg">
-    <img width="450" src="Venice night.jpg"> -->
+    <img width="450" src="Cannel.jpg" style="border:4px solid gray">
+    <img width="450" src="Gondola.jpg" style="border:4px solid gray">
+    <img width="450" src="Us in venice.jpg"style="border:4px solid gray">
+    <img width="450" src="Venice night.jpg"style="border:4px solid gray" >
 
     <p>
     Check the following youtube video to see the top ten things to do in Venice.</p>
@@ -44,7 +48,11 @@
     <h3>Siena</h3>
     <p> After spending a few days to explore Venice, we took a train to Siena in Tascany. A truely beautiful city! </p>
 
-  <img width="450" src="Us in Siena country side.jpg">
+  <img width="450" src="Us in Siena country side.jpg"style="border:4px solid gray">
+  <img width="450" src="Siena tower.jpg" style="border:4px solid gray">
+  <img width="450" src="Siena steps.jpg" style="border:4px solid gray">
+  <img width="450" src="Spritz.jpg" style="border:4px solid gray">
+
     <ul>
       <li> xxxx</li>
       <li> xxxx</li>
@@ -65,7 +73,12 @@
       <li> xxxx</li>
 
     </ul>
-    <img width="400" src="Island.jpg">
+    <img width="400" src="Yum.jpg" style="border:4px solid gray">
+    <img width="400" src="Sphinx.jpg" style="border:4px solid gray">
+    <img width="400" src="Sweets.jpg" style="border:4px solid gray">
+    <img width="400" src="Us in Sorrento.jpg" style="border:4px solid gray">
+    <img width="400" src="Island.jpg" style="border:4px solid gray">
+
     <p>
     Check this Rick Steve's YouTube video to learn more about Sorrento.</p>
     <iframe width="300" height="200" src="https://www.youtube.com/embed/1rx9dWL6cAc" frameborder="0" allowfullscreen></iframe>
@@ -74,7 +87,11 @@
     <h3>Rome</h3>
     <p> We wrapped our two week trip visiting Rome. </p>
 
-    <img width="800" src="Ectasy.jpg">
+    <img width="800" src="Ectasy Bernini.jpg" style="border:4px solid gray">
+    <img width="800" src="Roman bath.jpg" style="border:4px solid gray">
+    <img width="800" src="Rome.jpg" style="border:4px solid gray">
+    <img width="800" src="Gate.jpg" style="border:4px solid gray">
+
     <p>
     Check this Rome walking tour video to get some ideas for your next step in Rome.
     </p>
