--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <div class="header">
       <img width="250" src="Ava Photo.jpg">
+      <font color="#0058b4">
       <h1>Ava Han</h1>
+        <font color="black">
       <h2>User Experience Strategist and Kellogg MBA 2016</h2>
       <p>Contact Me:</p>
       <ul>
@@ -20,7 +22,7 @@
 
     <h3>Summary</h3>
     <p>
-      Ava is currently a design stragist for Allstate's user experience group in digital marketing.
+      Ava is currently a design strategist for Allstate's user experience group in digital marketing.
       Before joining Allstate, she worked in the fields of innovation, technology, CPG, and healthcare,
       applying user centered design principles, classical tranining in cultural anthropology (she received
       her Ph.D. in Cultural Anthropology from Washington State University in 2002), as well as strong
