linkable lists Venice

--- a/Travel.html
+++ b/Travel.html
@@ -25,14 +25,13 @@
       </ul>
     </div>
 
-    <h3><style>=border-bottom: solid 4px gray;padding-bottom:8px;<style>Venice</h3>
+    <h3>Venice</h3>
     <p> Our first stop was Venice. We landed at a small airport outside the city, from where we hopped on a water taxi which took us to the city center.
     It was an amazing experience. A bit pricey, but truely worth it. Here are some of my favorite places and things to do in Venice.
     <ul>
-      <li> xxxx</li>
-      <li> xxxx</li>
-      <li> xxxx</li>
-      <li> xxxx</li>
+      <li><a href="http://www.guggenheim.org/venice"> Guggenheim Museum </a></li>
+      <li><a href="https://en.wikipedia.org/wiki/Palazzo_Labia"> Tiepolo Ballroom in Palazzo Labia </a></li>
+      <li> <a href="http://www.basilicasanmarco.it/eng/index.bsm" >St. Mark Square Basilica </a></li>
     </ul>
 
     <img width="450" src="Cannel.jpg" style="border:4px solid gray">
@@ -53,12 +52,12 @@
   <img width="450" src="Siena steps.jpg" style="border:4px solid gray">
   <img width="450" src="Spritz.jpg" style="border:4px solid gray">
 
-    <ul>
+    <!-- <ul>
       <li> xxxx</li>
       <li> xxxx</li>
       <li> xxxx</li>
       <li> xxxx</li>
-    </ul>
+    </ul> -->
 
     <p>
     Check the following youtube video to see the top ten things to do in Siena.</p>
@@ -66,13 +65,8 @@
     </p>
 
     <h3>Sorrento</h3>
-    <p> From Siena, we traveled south to Sorrento, a gorgeous city on the Amalfi coast. What I loved the most about Sorrento: </p>
-    <ul>
-      <li> xxxx</li>
-      <li> xxxx</li>
-      <li> xxxx</li>
+    <p> From Siena, we traveled south to Sorrento, a gorgeous city on the Amalfi coast. </p>
 
-    </ul>
     <img width="400" src="Yum.jpg" style="border:4px solid gray">
     <img width="400" src="Sphinx.jpg" style="border:4px solid gray">
     <img width="400" src="Sweets.jpg" style="border:4px solid gray">
@@ -85,7 +79,8 @@
     </p>
 
     <h3>Rome</h3>
-    <p> We wrapped our two week trip visiting Rome. </p>
+    <p> We wrapped our two week trip visiting Rome. A bit exhausted by the end of the trip. Frankly speaking, I liked Rome the least, perhaps because I felt exhausted.
+    Having said that, I would love to visit Rome again and spend more time there as there is so much to see! </p>
 
     <img width="800" src="Ectasy Bernini.jpg" style="border:4px solid gray">
     <img width="800" src="Roman bath.jpg" style="border:4px solid gray">
