open hyper link in a new tab

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <h2>User Experience Strategist and Kellogg MBA 2016</h2>
       <p>Contact Me:</p>
       <ul>
-        <li><a href="https://www.linkedin.com/in/hua-han-9b484b19">LinkedIn</a></li>
-        <li><a href="https://twitter.com/HuaEthnographer">Twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/hua-han-9b484b19" target="blank">LinkedIn</a></li>
+        <li><a href="https://twitter.com/HuaEthnographer" target="blank">Twitter</a></li>
       </ul>
     </div>
 
