--- a/Travel.html
+++ b/Travel.html
@@ -2,12 +2,16 @@
 <html>
   <head>
     <style>
-    body {background-color: lightgrey;}
+    body {background-color: white;}
+    .header {background: lightyellow;
+      padding: 14px;
+      border-radius: 10px;}
+    </style>
     <title>Our Travels </title>
     <meta charset="UTF-8">
-    /*<!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->*/
-</style>
-</head>
+    <!-- /*<!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
+
+  </head>
 
   <body>
     <div class="header">
@@ -18,26 +22,33 @@
       <h2><i>Bella Italia! 2007</i></h2>
       <p> Useful links </p>
       <ul>
-        <li><a href="https://en.wikipedia.org/wiki/St_Mark%27s_Basilica#/media/File:Veneza47.jpg">St Mark's Basilica</a></li>
-        <li><a href="https://www.ricksteves.com/tours/italy">Rick Steve's Italy Tours 2016</a></li>
-        <li><a href="http://www.italyguides.it/en/tuscany/siena">Virtual Travel to Sienna</a></li>
-        <li> <a href="http://www.villasanmichele.eu/en/welcome"> San Michele Villa </a></li>
+        <li><a href="https://en.wikipedia.org/wiki/St_Mark%27s_Basilica#/media/File:Veneza47.jpg" target="blank" >St Mark's Basilica</a></li>
+        <li><a href="https://www.ricksteves.com/tours/italy" target="blank" >Rick Steve's Italy Tours 2016</a></li>
+        <li><a href="http://www.italyguides.it/en/tuscany/siena" target="blank" >Virtual Travel to Sienna</a></li>
+        <li> <a href="http://www.villasanmichele.eu/en/welcome" target="blank" >San Michele Villa </a></li>
       </ul>
     </div>
 
     <h3>Venice</h3>
+    <style>
+        h3 {
+          border-bottom: solid 4px gray;
+          padding-bottom: 8px;
+        }
+    </style>
     <p> Our first stop was Venice. We landed at a small airport outside the city, from where we hopped on a water taxi which took us to the city center.
-    It was an amazing experience. A bit pricey, but truely worth it. Here are some of my favorite places and things to do in Venice.
-    <ul>
-      <li><a href="http://www.guggenheim.org/venice"> Guggenheim Museum </a></li>
-      <li><a href="https://en.wikipedia.org/wiki/Palazzo_Labia"> Tiepolo Ballroom in Palazzo Labia </a></li>
-      <li> <a href="http://www.basilicasanmarco.it/eng/index.bsm" >St. Mark Square Basilica </a></li>
-    </ul>
+    It was an amazing experience. A bit pricey, but truely worth it. Here are some of my favorite places and things to do in Venice.</p>
 
-    <img width="450" src="Cannel.jpg" style="border:4px solid gray">
-    <img width="450" src="Gondola.jpg" style="border:4px solid gray">
-    <img width="450" src="Us in venice.jpg"style="border:4px solid gray">
-    <img width="450" src="Venice night.jpg"style="border:4px solid gray" >
+    <ol>
+      <li><a href="http://www.guggenheim.org/venice" target="blank" >Guggenheim Museum </a></li>
+      <li><a href="https://en.wikipedia.org/wiki/Palazzo_Labia" target="blank" >Tiepolo Ballroom in Palazzo Labia </a></li>
+      <li> <a href="http://www.basilicasanmarco.it/eng/index.bsm" target="blank" >St. Mark Square Basilica </a></li>
+    </0l>
+<br>
+    <img width="450" src="Cannel.jpg" style="border:2px solid gray; padding-top:10px">
+    <img width="450" src="Gondola.jpg" style="border:2px solid gray">
+    <img width="450" src="Us in venice.jpg"style="border:2px solid gray">
+    <img width="450" src="Venice night.jpg"style="border:2px solid gray" >
 
     <p>
     Check the following youtube video to see the top ten things to do in Venice.</p>
@@ -47,17 +58,10 @@
     <h3>Siena</h3>
     <p> After spending a few days to explore Venice, we took a train to Siena in Tascany. A truely beautiful city! </p>
 
-  <img width="450" src="Us in Siena country side.jpg"style="border:4px solid gray">
-  <img width="450" src="Siena tower.jpg" style="border:4px solid gray">
-  <img width="450" src="Siena steps.jpg" style="border:4px solid gray">
-  <img width="450" src="Spritz.jpg" style="border:4px solid gray">
-
-    <!-- <ul>
-      <li> xxxx</li>
-      <li> xxxx</li>
-      <li> xxxx</li>
-      <li> xxxx</li>
-    </ul> -->
+  <img width="450" src="Us in Siena country side.jpg"style="border:2px solid gray">
+  <img width="450" src="Siena tower.jpg" style="border:2px solid gray">
+  <img width="450" src="Siena steps.jpg" style="border:2px solid gray">
+  <img width="450" src="Spritz.jpg" style="border:2px solid gray">
 
     <p>
     Check the following youtube video to see the top ten things to do in Siena.</p>
@@ -67,11 +71,11 @@
     <h3>Sorrento</h3>
     <p> From Siena, we traveled south to Sorrento, a gorgeous city on the Amalfi coast. </p>
 
-    <img width="400" src="Yum.jpg" style="border:4px solid gray">
-    <img width="400" src="Sphinx.jpg" style="border:4px solid gray">
-    <img width="400" src="Sweets.jpg" style="border:4px solid gray">
-    <img width="400" src="Us in Sorrento.jpg" style="border:4px solid gray">
-    <img width="400" src="Island.jpg" style="border:4px solid gray">
+    <img width="400" src="Yum.jpg" style="border:2px solid gray">
+    <img width="400" src="Sphinx.jpg" style="border:2px solid gray">
+    <img width="400" src="Sweets.jpg" style="border:2px solid gray">
+    <img width="400" src="Us in Sorrento.jpg" style="border:2px solid gray">
+    <img width="400" src="Island.jpg" style="border:2px solid gray">
 
     <p>
     Check this Rick Steve's YouTube video to learn more about Sorrento.</p>
@@ -82,10 +86,10 @@
     <p> We wrapped our two week trip visiting Rome. A bit exhausted by the end of the trip. Frankly speaking, I liked Rome the least, perhaps because I felt exhausted.
     Having said that, I would love to visit Rome again and spend more time there as there is so much to see! </p>
 
-    <img width="800" src="Ectasy Bernini.jpg" style="border:4px solid gray">
-    <img width="800" src="Roman bath.jpg" style="border:4px solid gray">
-    <img width="800" src="Rome.jpg" style="border:4px solid gray">
-    <img width="800" src="Gate.jpg" style="border:4px solid gray">
+    <img width="800" src="Ectasy Bernini.jpg" style="border:2px solid gray">
+    <img width="800" src="Roman bath.jpg" style="border:2px solid gray">
+    <img width="800" src="Rome.jpg" style="border:2px solid gray">
+    <img width="800" src="Gate.jpg" style="border:2px solid gray">
 
     <p>
     Check this Rome walking tour video to get some ideas for your next step in Rome.
