image drop shadow

--- a/Travel.html
+++ b/Travel.html
@@ -15,7 +15,7 @@
 
   <body>
     <div class="header">
-      <center><img width="850" style="border:10px solid black; padding:15px" src="Rome view.jpg"></center>
+      <center><img width="850" style="border:10px solid black; padding:15px; box-shadow: 8px 8px 4px #AAA;" src="Rome view.jpg"></center>
       <font color="#0058b4">
       <h1>Our Travels</h1>
         <font color="black">
